# node-sdl2

./: CMakeLists.txt  package-lock.json  package.json
src/: addon.h  event.cpp  event.hpp  hints.cpp  hints.hpp  initialization-and-shutdown.cpp  initialization-and-shutdown.hpp  js-helper.h  main.cpp  sdl-helper.h  string-helper.h  window.cpp  window.hpp
